--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,3 +78,23 @@ button.nav-bar-button{
   text-align: center;
 }
 
+/*
+SLIDERS
+*/
+
+#sliders form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#sliders form p {
+  width: 30%; /* Adjust the width as needed */
+  margin: 10px; /* Add some margin between sliders */
+}
+
+#sliders form input {
+  width: 15%;
+}
